--- a/DA-HTML_CSS/index.html
+++ b/DA-HTML_CSS/index.html
@@ -3,139 +3,62 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Dự Án HTML/CSS</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
+      href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
     />
-
     <link rel="stylesheet" href="style2.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="header">
-        <div class="pro">
-          <div class="pro-logo">
-            <img src="./img/logo.png" alt="" width="200" />
-          </div>
-          <div class="pro-menu">
-            <ul>
-              <li>
-                <a href="">Home</a>
-                <a href="">Shop</a>
-                <a href="">About</a>
-                <a href="">Contact</a>
+    <style>
+      a {
+        background-color: blue;
+      }
+    </style>
+    <header>
+      <div class="container">
+        <div class="header-inner">
+          <a href=""><img src="./img/logo.svg" alt="" /></a>
+
+          <nav class="main-menu">
+            <ul class="main-menu__list">
+              <li class="main-menu__item">
+                <a href="" class="main-menu__link">home</a>
+              </li>
+              <li class="main-menu__item">
+                <a href="" class="main-menu__link">sanpham</a>
+              </li>
+              <li class="main-menu__item">
+                <a href="" class="main-menu__link">show</a>
+              </li>
+              <li class="main-menu__item">
+                <a href="" class="main-menu__link">email</a>
               </li>
             </ul>
-          </div>
-          <div class="pro-icon">
-            <a href=""
-              ><i class="fa-regular fa-user" style="color: #000000"></i
-            ></a>
-            <a href=""
-              ><i
-                class="fa-solid fa-magnifying-glass"
-                style="color: #000000"
-              ></i
-            ></a>
-            <a href=""> <i class="fa-regular fa-heart"></i></a>
-            <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
-          </div>
-        </div>
-        <div class="banner">
-          <h1>Trang chủ</h1>
-          <h3>Home</h3>
-          <!-- <img src="./img/banner.png" alt="" width="100%" /> -->
-        </div>
-      </div>
-      <!-- end html -->
-      <div class="main">
-        <div class="text"><p>New</p></div>
-        <hr class="hr" />
-        <div class="sanpham">
-          <div class="sanpham-sp1">
-            <img src="./img/sanpham1.png" alt="" />
-            <div class="sanpham-sp1-noidung">
-              <h3>Lolito</h3>
-              <p>Luxury big sofa</p>
-              <span>7.000.000đ</span>
-              <del>14.000.000đ</del>
-              <div class="sanpham-sp1-noidung-add">
-                <div class="sanpham-sp1-noidung-add-button">
-                  <a href="">Add to cart</a>
-                </div>
-                <div class="sanpham-sp1-noidung-add-share">
-                  <p>Share</p>
-                  <p>Compare</p>
-                  <p>Like</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="sanpham-sp1">
-            <img src="./img/sanpham1.png" alt="" />
-            <div class="sanpham-sp1-noidung">
-              <h3>Lolito</h3>
-              <p>Luxury big sofa</p>
-              <span>7.000.000đ</span>
-              <del>14.000.000đ</del>
-              <div class="sanpham-sp1-noidung-add">
-                <div class="sanpham-sp1-noidung-add-button">
-                  <a href="">Add to cart</a>
-                </div>
-                <div class="sanpham-sp1-noidung-add-share">
-                  <p>Share</p>
-                  <p>Compare</p>
-                  <p>Like</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="sanpham-sp1">
-            <img src="./img/sanpham1.png" alt="" />
-            <div class="sanpham-sp1-noidung">
-              <h3>Lolito</h3>
-              <p>Luxury big sofa</p>
-              <span>7.000.000đ</span>
-              <del>14.000.000đ</del>
-              <div class="sanpham-sp1-noidung-add">
-                <div class="sanpham-sp1-noidung-add-button">
-                  <a href="">Add to cart</a>
-                </div>
-                <div class="sanpham-sp1-noidung-add-share">
-                  <p>Share</p>
-                  <p>Compare</p>
-                  <p>Like</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="sanpham-sp1">
-            <img src="./img/sanpham1.png" alt="" />
-            <div class="sanpham-sp1-noidung">
-              <h3>Lolito</h3>
-              <p>Luxury big sofa</p>
-              <span>7.000.000đ</span>
-              <del>14.000.000đ</del>
-
-              <div class="sanpham-sp1-noidung-add">
-                <div class="sanpham-sp1-noidung-add-button">
-                  <a href="">Add to cart</a>
-                </div>
-                <div class="sanpham-sp1-noidung-add-share">
-                  <p>Share</p>
-                  <p>Compare</p>
-                  <p>Like</p>
-                </div>
-              </div>
-            </div>
+          </nav>
+          <div class="header-block">
+            <div class="user"><span>user</span></div>
+            <div class="search"><span>search</span></div>
+            <div class="wishlist"><span>wishlist</span></div>
+            <div class="cart"><span>cart</span></div>
           </div>
         </div>
       </div>
-      <div class="footer"></div>
-    </div>
+    </header>
+    <section class="banner">
+      <img src="https://picsum.photos/id/48/1440/500" alt="" />
+    </section>
+    <section class="new"></section>
+    <section class="shop"></section>
+    <section class="blog"></section>
+    <section class="services"></section>
+    <footer></footer>
   </body>
 </html>
