--- a/DA-HTML_CSS/HTMLCSS/index.html
+++ b/DA-HTML_CSS/HTMLCSS/index.html
@@ -78,6 +78,15 @@
                   <span class="new-price-old">2.500.000đ</span>
                 </div>
               </div>
+              <div class="new-actions">
+                <button class="btn new-action__quickview">Quick View</button>
+                <button class="btn new-action__addtocart">Add to Cart</button>
+                <div class="new-action-more">
+                  <span class="new-action__share">Share</span>
+                  <span class="new-action__compare">Compare</span>
+                  <span class="new-action__like">Like</span>
+                </div>
+              </div>
             </div>
             <div class="new-item">
               <div class="new_image">
