--- a/DA-HTML_CSS/HTMLCSS/index.html
+++ b/DA-HTML_CSS/HTMLCSS/index.html
@@ -52,7 +52,7 @@
               <span><img src="./public/images/img3.svg" /></span>
             </div>
             <div class="header-item-user">
-              <span><img src="./public/images/img4.svg" /></span>
+              <a href="./cart.html"><img src="./public/images/img4.svg" /></a>
             </div>
           </div>
         </div>
