--- a/DA-HTML_CSS/HTMLCSS/shop.html
+++ b/DA-HTML_CSS/HTMLCSS/shop.html
@@ -31,7 +31,7 @@
                 <a href="./Trangchu.html" class="main-menu__link">Home</a>
               </li>
               <li class="main-menu__item">
-                <a href="./Shop" class="main-menu__link">Shop</a>
+                <a href="./shop.html" class="main-menu__link">Shop</a>
               </li>
               <li class="main-menu__item">
                 <a href="" class="main-menu__link">About</a>
@@ -52,7 +52,7 @@
               <span><img src="./public/images/img3.svg" /></span>
             </div>
             <div class="header-item-user">
-              <span><img src="./public/images/img4.svg" /></span>
+              <a href="./cart.html"><img src="./public/images/img4.svg" /></a>
             </div>
           </div>
         </div>
