--- a/DA-HTML_CSS/HTMLCSS/cart.html
+++ b/DA-HTML_CSS/HTMLCSS/cart.html
@@ -24,26 +24,30 @@
           <a href="" class="header__logo">
             <img src="./public/images/logo.svg" alt="" />
           </a>
-          <div class="button-mobile"><button>=</button></div>
+          <div class="button-mobile">
+            <div class="button-mobile-bar1"></div>
+            <div class="button-mobile-bar2"></div>
+            <div class="button-mobile-bar3"></div>
+          </div>
           <nav class="main-menu">
             <ul class="main-menu__list">
               <li class="main-menu__item">
                 <a href="./Trangchu.html" class="main-menu__link">Home</a>
               </li>
               <li class="main-menu__item">
-                <a href="./Shop" class="main-menu__link">Shop</a>
+                <a href="./shop.html" class="main-menu__link">Shop</a>
               </li>
               <li class="main-menu__item">
-                <a href="" class="main-menu__link">About</a>
+                <a href="#" class="main-menu__link">About</a>
               </li>
               <li class="main-menu__item">
-                <a href="" class="main-menu__link">Contact</a>
+                <a href="#" class="main-menu__link">Contact</a>
               </li>
             </ul>
           </nav>
           <div class="header-items">
             <div class="header-item-user">
-              <span><img src="./public/images/img1.svg" /></span>
+              <a href="login.html"><img src="./public/images/img1.svg" /></a>
             </div>
             <div class="header-item-user">
               <span><img src="./public/images/img2.svg" /></span>
@@ -52,7 +56,7 @@
               <span><img src="./public/images/img3.svg" /></span>
             </div>
             <div class="header-item-user">
-              <span><img src="./public/images/img4.svg" /></span>
+              <a href="./cart.html"><img src="./public/images/img4.svg" /></a>
             </div>
           </div>
         </div>
@@ -60,7 +64,7 @@
     </header>
     <section class="banner">
       <img
-        src="https://picsum.photos/id/10/1440/500"
+        src="https://picsum.photos/id/204/1440/500"
         alt=""
         class="banner__img"
       />
