--- a/DA-HTML_CSS/HTMLCSS/index.html
+++ b/DA-HTML_CSS/HTMLCSS/index.html
@@ -24,7 +24,11 @@
           <a href="" class="header__logo">
             <img src="./public/images/logo.svg" alt="" />
           </a>
-          <div class="button-mobile"><button>=</button></div>
+          <div class="button-mobile">
+            <div class="button-mobile-bar1"></div>
+            <div class="button-mobile-bar2"></div>
+            <div class="button-mobile-bar3"></div>
+          </div>
           <nav class="main-menu">
             <ul class="main-menu__list">
               <li class="main-menu__item">
@@ -34,16 +38,16 @@
                 <a href="./shop.html" class="main-menu__link">Shop</a>
               </li>
               <li class="main-menu__item">
-                <a href="" class="main-menu__link">About</a>
+                <a href="#" class="main-menu__link">About</a>
               </li>
               <li class="main-menu__item">
-                <a href="" class="main-menu__link">Contact</a>
+                <a href="#" class="main-menu__link">Contact</a>
               </li>
             </ul>
           </nav>
           <div class="header-items">
             <div class="header-item-user">
-              <span><img src="./public/images/img1.svg" /></span>
+              <a href="login.html"><img src="./public/images/img1.svg" /></a>
             </div>
             <div class="header-item-user">
               <span><img src="./public/images/img2.svg" /></span>
@@ -60,7 +64,7 @@
     </header>
     <section class="banner">
       <img
-        src="https://picsum.photos/id/10/1440/500"
+        src="https://picsum.photos/id/376/1440/500"
         alt=""
         class="banner__img"
       />
@@ -76,7 +80,7 @@
             <div class="product-item">
               <div class="product-image">
                 <img
-                  src="https://picsum.photos/id/10/300/300"
+                  src="https://picsum.photos/id/101/300/300"
                   alt=""
                   class="product__thumbnail"
                 />
@@ -99,7 +103,9 @@
                   >
                 </button>
                 <button class="btn product-action__addtocart">
-                  Add To Cart
+                  <a href="cart.html" class="product-action__link">
+                    Add to Cart</a
+                  >
                 </button>
                 <div class="product-actions-more">
                   <span class="product-action__share">Share</span>
@@ -112,7 +118,7 @@
             <div class="product-item">
               <div class="product-image">
                 <img
-                  src="https://picsum.photos/id/10/300/300"
+                  src="https://picsum.photos/id/133/300/300"
                   alt=""
                   class="product__thumbnail"
                 /><span class="product-new">New</span>
@@ -129,10 +135,14 @@
               </div>
               <div class="product-actions">
                 <button class="btn product-action__quickview">
-                  Quick View
+                  <a href="detail.html" class="product-action__link">
+                    Quick View</a
+                  >
                 </button>
                 <button class="btn product-action__addtocart">
-                  Add To Cart
+                  <a href="cart.html" class="product-action__link">
+                    Add to Cart</a
+                  >
                 </button>
                 <div class="product-actions-more">
                   <span class="product-action__share">Share</span>
@@ -145,7 +155,7 @@
             <div class="product-item">
               <div class="product-image">
                 <img
-                  src="https://picsum.photos/id/10/300/300"
+                  src="https://picsum.photos/id/123/300/300"
                   alt=""
                   class="product__thumbnail"
                 />
@@ -163,10 +173,14 @@
               </div>
               <div class="product-actions">
                 <button class="btn product-action__quickview">
-                  Quick View
+                  <a href="detail.html" class="product-action__link">
+                    Quick View</a
+                  >
                 </button>
                 <button class="btn product-action__addtocart">
-                  Add To Cart
+                  <a href="cart.html" class="product-action__link">
+                    Add to Cart</a
+                  >
                 </button>
                 <div class="product-actions-more">
                   <span class="product-action__share">Share</span>
@@ -179,7 +193,7 @@
             <div class="product-item">
               <div class="product-image">
                 <img
-                  src="https://picsum.photos/id/10/300/300"
+                  src="https://picsum.photos/id/312/300/300"
                   alt=""
                   class="product__thumbnail"
                 />
@@ -199,10 +213,14 @@
               </div>
               <div class="product-actions">
                 <button class="btn product-action__quickview">
-                  Quick View
+                  <a href="detail.html" class="product-action__link">
+                    Quick View</a
+                  >
                 </button>
                 <button class="btn product-action__addtocart">
-                  Add To Cart
+                  <a href="cart.html" class="product-action__link">
+                    Add to Cart</a
+                  >
                 </button>
                 <div class="product-actions-more">
                   <span class="product-action__share">Share</span>
