--- a/DA-HTML_CSS/HTMLCSS/login.html
+++ b/DA-HTML_CSS/HTMLCSS/login.html
@@ -39,7 +39,9 @@
               </div>
 
               <div class="login-one">
-                <button class="login-btn-one">Login</button>
+                <button class="login-btn-one">
+                  <a href="./index.html" class="login-btn-link">Login</a>
+                </button>
               </div>
 
               <div class="login-face">
