--- a/DA-HTML_CSS/test/index.html
+++ b/DA-HTML_CSS/test/index.html
@@ -1,31 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style>
-      /* CSS cho phần giao diện */
-      .container {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        width: 200px;
-        padding: 10px;
-        background-color: #ffffff;
-        border-radius: 10px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-      }
-      .button {
-        font-size: 20px;
-        cursor: pointer;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="container">
-      <div class="button">-</div>
-      <div class="number">1</div>
-      <div class="button">+</div>
-    </div>
-  </body>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+.container {
+  display: inline-block;
+  cursor: pointer;
+}
+
+.bar1, .bar2, .bar3 {
+  width: 35px;
+  height: 5px;
+  background-color: #333;
+  margin: 6px 0;
+  transition: 0.4s;
+}
+
+.change  {
+  
+
+}
+
+
+
+</style>
+</head>
+<body>
+
+<p id="content">Click on the Menu Icon to transform it to "X":</p>
+
+<button id="btn1">click</button>
+<button id="btn2">click</button>
+
+<script>
+  const content = document.getElementById("content")
+  const btn2 = document.getElementById("btn2")
+  const btn1 = document.getElementById("btn1")
+  
+  btn1.onclick = function(){
+ content.innerHTML =`<nav>
+  <ul>
+    <li><a href="">hello</a></li>
+    <li><a href="">hello</a></li>
+
+    <li><a href="">hello</a></li> <li><a href="">hello</a></li>
+    
+  </ul>
+</nav>`;
+  }
+  btn2.onclick = function(){
+ content.innerHTML ='hello';
+  }
+</script>
+
+</body>
+</html>
 </html>
