--- a/DA-HTML_CSS/HTMLCSS/login.html
+++ b/DA-HTML_CSS/HTMLCSS/login.html
@@ -30,12 +30,12 @@
               <div class="login-username">
                 <label for="username" class="login-label"> Username:</label
                 ><br />
-                <input type="number" class="login-input" />
+                <input type="text" class="login-input" />
               </div>
               <div class="login-password">
                 <label for="password" class="login-label">Password:</label
                 ><br />
-                <input type="number" class="login-input" />
+                <input type="password" class="login-input" />
               </div>
 
               <div class="login-one">
@@ -50,7 +50,8 @@
                     src="./public/images/login/facebook.svg"
                     class="login-btn-facebook"
                     alt=""
-                  />Facebook
+                  />
+                  <a href="#" class="login-btn-link">Facebook</a>
                 </button>
 
                 <button class="login-btn-goo">
@@ -58,7 +59,8 @@
                     src="./public/images/login/google.svg"
                     alt=""
                     class="login-btn-google"
-                  />Google
+                  />
+                  <a href="#" class="login-btn-link">Google</a>
                 </button>
               </div>
             </form>
