--- a/DA-HTML_CSS/HTMLCSS/checkout.html
+++ b/DA-HTML_CSS/HTMLCSS/checkout.html
@@ -32,7 +32,7 @@
           <nav class="main-menu">
             <ul class="main-menu__list">
               <li class="main-menu__item">
-                <a href="./Trangchu.html" class="main-menu__link">Home</a>
+                <a href="./index.html" class="main-menu__link">Home</a>
               </li>
               <li class="main-menu__item">
                 <a href="./shop.html" class="main-menu__link">Shop</a>
@@ -50,10 +50,14 @@
               <a href="login.html"><img src="./public/images/img1.svg" /></a>
             </div>
             <div class="header-item-user">
-              <span><img src="./public/images/img2.svg" /></span>
+              <span
+                ><a href="#"><img src="./public/images/img2.svg" /></a
+              ></span>
             </div>
             <div class="header-item-user">
-              <span><img src="./public/images/img3.svg" /></span>
+              <span
+                ><a href="#"><img src="./public/images/img3.svg" /></a
+              ></span>
             </div>
             <div class="header-item-user">
               <a href="./cart.html"><img src="./public/images/img4.svg" /></a>
@@ -188,11 +192,11 @@
                 shipped until the funds have cleared in our account.
               </p>
               <div class="bill-bank-radio">
-                <input type="radio" class="bill-bank_input" />
+                <input type="radio" name="abc" class="bill-bank_input" />
                 <span class="bill-bank_name">Direct Bank Transfer</span>
               </div>
               <div class="bill-bank-radio">
-                <input type="radio" class="bill-bank_input" />
+                <input type="radio" name="abc" class="bill-bank_input" />
                 <span class="bill-bank_name">Cash On Delivery</span>
               </div>
               <p class="bill-bank_des2">
@@ -202,7 +206,11 @@
               </p>
             </div>
             <div class="bill-btn">
-              <button class="bill-button">Place order</button>
+              <button class="bill-button">
+                <a href="#" style="text-decoration: none; color: black"
+                  >Place order</a
+                >
+              </button>
             </div>
           </div>
         </div>
