--- a/DA-HTML_CSS/HTMLCSS/index.html
+++ b/DA-HTML_CSS/HTMLCSS/index.html
@@ -32,7 +32,7 @@
           <nav class="main-menu">
             <ul class="main-menu__list">
               <li class="main-menu__item">
-                <a href="./Trangchu.html" class="main-menu__link">Home</a>
+                <a href="./index.html" class="main-menu__link">Home</a>
               </li>
               <li class="main-menu__item">
                 <a href="./shop.html" class="main-menu__link">Shop</a>
@@ -50,10 +50,14 @@
               <a href="login.html"><img src="./public/images/img1.svg" /></a>
             </div>
             <div class="header-item-user">
-              <span><img src="./public/images/img2.svg" /></span>
+              <span
+                ><a href="#"><img src="./public/images/img2.svg" /></a
+              ></span>
             </div>
             <div class="header-item-user">
-              <span><img src="./public/images/img3.svg" /></span>
+              <span
+                ><a href="#"><img src="./public/images/img3.svg" /></a
+              ></span>
             </div>
             <div class="header-item-user">
               <a href="./cart.html"><img src="./public/images/img4.svg" /></a>
